--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 	<link rel="icon" href="./favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.Pvl0esyV.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.PbFf590r.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.s6Rs4Atc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0TRxhhYn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.vlLoHvou.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.QXfD-pdR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Q-2c_U4W.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.on4UbutL.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.2nfltf0s.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.ma9CXx0G.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.jrNCVAMu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.bOgCncWJ.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.1pFzk2Dx.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -26,11 +26,11 @@
 </head>
 
 <body data-sveltekit-preload-data="hover">
-	<div style="display: contents">   <main> <div class="bubble-menu rounded-md"></div> <div class="p-4 max-md:px-2 max-md:pb-2 max-md:pt-4"></div></main> 
+	<div style="display: contents">   <main> <div class="bubble-menu rounded-md"></div> <div></div></main> 
 			
 			<script>
 				{
-					__sveltekit_1muxx4q = {
+					__sveltekit_v9ob76 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0TRxhhYn.js"),
-						import("./_app/immutable/entry/app.on4UbutL.js")
+						import("./_app/immutable/entry/start.QXfD-pdR.js"),
+						import("./_app/immutable/entry/app.2nfltf0s.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
